fix: update font size and line-height for improved readability

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@
 
 html {
     height: 100%;
-    font-size: 16px;
-    line-height: 1.0;
+    font-size: 18px;
+    line-height: 1;
     scroll-behavior: smooth;
     animation: fadeInAnimation 1s;
     animation-timing-function: ease-out;
